2019/css/style.css
/* ... */
.social-icon li a:hover {
    background: #f2545f;
    color: #ffffff;
}



/*---------------------------------------
   Responsive styles            
-----------------------------------------*/
@media (max-width: 980px) {

  p {font-size: 13px;}

  .custom-navbar .navbar-brand {
    font-size: 2rem;
  }

  .custom-navbar .nav li a {
    font-size: 11px;
	line-height: 20px;
  }

  #intro { height: 65vh; }

  #video iframe {
    margin-top: 42px;
  }

  #contact .contact_detail {
  background: #ffffff;
  padding: 10rem 3rem 10rem 5rem;
}

}

@media (max-width: 768px) {

  .custom-navbar .navbar-brand {
    line-height: 20px;
  }

  #overview img,
  #detail .col-md-4,
  #register form {
    padding-top: 32px;
  }

  .nav-tabs > li > a {
    font-size: 13px;
  }

  #program img {
    padding-bottom: 32px;
  }

  #sponsors img {
    padding-top: 22px;
  }

  #contact .contact_detail {
    margin-top: 82px;
  }

}

@media (max-width: 760px) {

  #intro {
    height: 100vh;
  }

}

